// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getPromptForKind (drift detection) > master_data system prompt matches snapshot 1`] = `
"You are extracting structured data for a manufacturing ERP. Rules:
- If a value is not present in the source, leave it null. Do not invent values.
- Normalise units where obvious (e.g. "150 GSM" -> 150). Leave units in the field name as documented in the schema.
- Preserve the user's exact item codes and product names. Do not rewrite or "improve" them.
- Numbers must be numbers (not strings). Strings must not contain unit suffixes when the schema asks for a number.
- Use the provided tool to return structured output. Do not respond in plain text.

You are extracting product master data from a customer-supplied file.
Different customers use very different layouts, column names, and
languages — your job is to map their data to MerQuant's standardized
internal schema. Only the SKU code (item_code) is universal.

Each input worksheet renders as a CSV block in the user message.
The first row is usually the column header. Treat the column headers
as AUTHORITATIVE: if a column is clearly named, use its values exactly
for the matching target field. Don't overthink or re-derive.

Standardized output sections:
- articles                (item_code, brand, product_type, size)
- fabric_consumption      (item_code, component_type, fabric_type, gsm, width_cm, consumption_per_unit, wastage_percent, color)
- accessory_consumption   (item_code, category, item_name, material, size_spec, placement, consumption_per_unit)
- carton_master           (item_code, units_per_carton, carton_length_cm, carton_width_cm, carton_height_cm)
- price_list              (item_code, price_usd, effective_from)
- suppliers               (name, contact_email, contact_phone)
- seasons                 (name, start_date, end_date)
- production_lines        (name, line_type, daily_capacity)

═══════════════════════════════════════════════════════════════════════
COLUMN MAPPING RULES (read carefully)
═══════════════════════════════════════════════════════════════════════

1. The column HEADER is your primary source of truth. If the header
   says "Part" or "Component" or "component_type", its values go to
   component_type. Don't second-guess.

2. For columns whose names don't directly match a target field, use
   the CONTENT of the values to infer the mapping:
     - Numbers like "170", "300 GSM"   → gsm
     - Numbers in cm range "112", "150" → width_cm
     - Strings like "Flat Sheet", "Fitted Sheet"  → component_type
     - Strings like "85% Modal Jersey Knit, 170 GSM" → fabric_type
     - Item codes (alphanumeric with hyphens) → item_code

3. ABSOLUTELY FORBIDDEN values for fabric_consumption.component_type:
   the following words/patterns must NEVER appear there. If you find
   a fabric description that looks like one of these, you have made
   a mistake — the value belongs in fabric_type, not component_type.
     • Fabric constructions: Damask, Flannel, French Terry, Interlock Knit, Jacquard, Jersey Knit, Microfiber, Non-woven, PU Laminate, Percale, Pique Knit, Plain Weave, Poplin, Rib Knit, Sateen, TPU Laminate, Tricot Knit, Twill, Velour
     • Fibre / material names: Acrylic, Bamboo, Cotton, Egyptian Cotton, Linen, Lyocell, Microfiber Polyester, Modal, Nylon, Pima Cotton, Polyester, Rayon, Silk, Spandex, Supima Cotton, Wool
     • Material percentages: "85%", "100%"
     • GSM values: "170 GSM", "300 GSM"
     • Yarn counts: "40s", "20D", "30/1"
     • Thread counts: "300 TC", "400 TC"

4. component_type MUST be one of these (or a customer-specific variant
   of a part name — short noun phrase describing a physical garment part):
     "Back", "Binding", "Bottom", "Evalon Membrane", "Fabric Bag", "Filling", "Fitted Sheet", "Flat Sheet", "Front", "Inner", "Lamination", "Outer", "Pillow Case", "Pillow Compression", "Piping", "Platform", "Quilting", "Sham", "Skirt", "Sleeper Flap", "Top Fabric", "Triangle", "Window"

5. A single SKU often has multiple fabric_consumption rows — one per
   part. They typically share the same fabric_type but have different
   component_type values. Preserve that 1:N relationship. Don't
   collapse rows that have different component_type values.

6. accessory_consumption.category should be one of:
     "Brand Label", "Button", "Care Label", "Drawcord", "Elastic", "Hang Tag", "Insert Card", "Label", "Law Tag", "PVC Bag", "Packaging", "Polybag", "Size Label", "Snap", "Sticker", "Stiffener", "Tape", "Thread", "Velcro", "Zipper".

═══════════════════════════════════════════════════════════════════════

Sheets you don't recognise → ignore them.
Sheets that are obviously empty (header only, no rows) → omit the
output section entirely rather than emitting an empty array.

If a sheet has data you can't confidently map (column meanings unclear),
include what you CAN map and lower _confidence.overall accordingly.
A confidence score under 0.6 will trigger a manual review step on the
client side, which is preferable to confidently emitting wrong data.

Produce one tool call to "extract_master_data".

For "_confidence.overall" use:
  0.9-1.0 = column headers were explicit; mapping was 1:1
  0.6-0.9 = some inference required from values, but mapping is sound
  0.3-0.6 = significant guesswork; ambiguous columns
  0.0-0.3 = file barely resembles master data"
`;

exports[`getPromptForKind (drift detection) > master_data tool schema matches snapshot 1`] = `
{
  "description": "Return the structured contents of a master-data XLSX export.",
  "input_schema": {
    "properties": {
      "_confidence": {
        "properties": {
          "overall": {
            "type": "number",
          },
          "per_section": {
            "type": "object",
          },
        },
        "required": [
          "overall",
        ],
        "type": "object",
      },
      "_notes": {
        "type": [
          "string",
          "null",
        ],
      },
      "accessory_consumption": {
        "items": {
          "properties": {
            "category": {
              "type": "string",
            },
            "consumption_per_unit": {
              "type": [
                "number",
                "null",
              ],
            },
            "item_code": {
              "type": "string",
            },
            "item_name": {
              "type": [
                "string",
                "null",
              ],
            },
            "material": {
              "type": [
                "string",
                "null",
              ],
            },
            "placement": {
              "type": [
                "string",
                "null",
              ],
            },
            "size_spec": {
              "type": [
                "string",
                "null",
              ],
            },
          },
          "required": [
            "item_code",
            "category",
          ],
          "type": "object",
        },
        "type": "array",
      },
      "articles": {
        "items": {
          "properties": {
            "brand": {
              "type": [
                "string",
                "null",
              ],
            },
            "item_code": {
              "type": "string",
            },
            "product_type": {
              "type": [
                "string",
                "null",
              ],
            },
            "size": {
              "type": [
                "string",
                "null",
              ],
            },
          },
          "required": [
            "item_code",
          ],
          "type": "object",
        },
        "type": "array",
      },
      "carton_master": {
        "items": {
          "properties": {
            "carton_height_cm": {
              "type": [
                "number",
                "null",
              ],
            },
            "carton_length_cm": {
              "type": [
                "number",
                "null",
              ],
            },
            "carton_width_cm": {
              "type": [
                "number",
                "null",
              ],
            },
            "item_code": {
              "type": "string",
            },
            "units_per_carton": {
              "type": [
                "number",
                "null",
              ],
            },
          },
          "required": [
            "item_code",
          ],
          "type": "object",
        },
        "type": "array",
      },
      "fabric_consumption": {
        "items": {
          "properties": {
            "color": {
              "type": [
                "string",
                "null",
              ],
            },
            "component_type": {
              "type": "string",
            },
            "consumption_per_unit": {
              "type": [
                "number",
                "null",
              ],
            },
            "fabric_type": {
              "type": [
                "string",
                "null",
              ],
            },
            "gsm": {
              "type": [
                "number",
                "null",
              ],
            },
            "item_code": {
              "type": "string",
            },
            "wastage_percent": {
              "type": [
                "number",
                "null",
              ],
            },
            "width_cm": {
              "type": [
                "number",
                "null",
              ],
            },
            "yarn_count": {
              "type": [
                "string",
                "null",
              ],
            },
            "yarn_type": {
              "type": [
                "string",
                "null",
              ],
            },
          },
          "required": [
            "item_code",
            "component_type",
          ],
          "type": "object",
        },
        "type": "array",
      },
      "price_list": {
        "items": {
          "properties": {
            "effective_from": {
              "type": [
                "string",
                "null",
              ],
            },
            "item_code": {
              "type": "string",
            },
            "price_usd": {
              "type": [
                "number",
                "null",
              ],
            },
          },
          "required": [
            "item_code",
          ],
          "type": "object",
        },
        "type": "array",
      },
      "production_lines": {
        "items": {
          "properties": {
            "daily_capacity": {
              "type": [
                "number",
                "null",
              ],
            },
            "line_type": {
              "type": [
                "string",
                "null",
              ],
            },
            "name": {
              "type": "string",
            },
          },
          "required": [
            "name",
          ],
          "type": "object",
        },
        "type": "array",
      },
      "seasons": {
        "items": {
          "properties": {
            "end_date": {
              "type": [
                "string",
                "null",
              ],
            },
            "name": {
              "type": "string",
            },
            "start_date": {
              "type": [
                "string",
                "null",
              ],
            },
          },
          "required": [
            "name",
          ],
          "type": "object",
        },
        "type": "array",
      },
      "suppliers": {
        "items": {
          "properties": {
            "contact_email": {
              "type": [
                "string",
                "null",
              ],
            },
            "contact_phone": {
              "type": [
                "string",
                "null",
              ],
            },
            "name": {
              "type": "string",
            },
          },
          "required": [
            "name",
          ],
          "type": "object",
        },
        "type": "array",
      },
    },
    "required": [
      "_confidence",
    ],
    "type": "object",
  },
  "name": "extract_master_data",
}
`;

exports[`getPromptForKind (drift detection) > tech_pack system prompt matches snapshot 1`] = `
"You are extracting structured data for a manufacturing ERP. Rules:
- If a value is not present in the source, leave it null. Do not invent values.
- Normalise units where obvious (e.g. "150 GSM" -> 150). Leave units in the field name as documented in the schema.
- Preserve the user's exact item codes and product names. Do not rewrite or "improve" them.
- Numbers must be numbers (not strings). Strings must not contain unit suffixes when the schema asks for a number.
- Use the provided tool to return structured output. Do not respond in plain text.

You are extracting from a single textile tech pack uploaded as XLSX.
The user message contains each worksheet rendered as a CSV block.
A tech pack typically has:
- a header sheet with brand, product type, product number, and product name
- one or more rows describing fabric components (shell, lining, fill, etc.) with GSM, construction, finish
- a SKU table where each row is one finished article (size + colour + dimensions)
- optional sheets for labels, accessories, trims, packaging, and zipper specs

═══════════════════════════════════════════════════════════════════════
TRIMS vs ACCESSORIES vs PACKAGING — read carefully
═══════════════════════════════════════════════════════════════════════
These three buckets are NOT interchangeable. Route each item correctly:

• "trims"       → SEWN-IN functional components: zipper, elastic, drawstring,
                  sewing thread, velcro, snap, button, eyelet, ribbon, binding tape.
                  These are consumed BY THE STITCHER during garment construction.
• "accessories" → ATTACHED non-fabric items: care label, brand label, size label,
                  hang tag, law tag, sticker, barcode, insert card, stiffener.
                  These are FINISHING items added after construction.
• "packaging"   → THE BOX/BAG holding the finished product: polybag, PVC bag,
                  carton, kraft bag, master carton.
• "labels"      → A sub-set of accessories that carry text/info (care, brand, size,
                  hang tag, etc). Repeat them in BOTH "labels" AND "accessories"
                  is fine — downstream code dedupes.

For each item, populate every field you can read from the source. NEVER
leave color or size_spec null when the source clearly shows them.

═══════════════════════════════════════════════════════════════════════
YARN FIELDS — fabric_specs[].yarn_count and yarn_type
═══════════════════════════════════════════════════════════════════════
Every fabric_specs entry has two structured yarn fields. Tech packs
typically embed yarn info inside the construction string ("32S Loop /
100D bottom") or the fabric description ("100% Polyester 75D"). Pull
that info out into these dedicated fields whenever it's there.

• yarn_count — the spinning / denier notation. Common shapes:
    "30/1"        cotton single
    "40/2"        cotton two-ply
    "30s" or "40S" English count (Ne)
    "Ne 30"       explicit Ne notation
    "Nm 60"       metric count
    "75D"         denier (filament yarns — polyester, nylon, spandex)
    "150D/48F"    denier / filament count
  If a fabric component has TWO yarn counts (e.g. "32S Loop / 100D
  bottom" — terry-knit constructions), join them with " / " in source
  order: "32S / 100D".
  Leave null if the source genuinely doesn't state a count (e.g.
  "Compact Knit Jersey" with no further detail).

• yarn_type — the fibre composition with percentages. Common shapes:
    "100% Cotton"
    "100% Polyester"
    "85% Modal / 10% Polyester / 5% Spandex"
    "Egyptian Cotton"   (when no percentages stated, just the fibre name)
  Use canonical fibre names (Cotton, Polyester, Modal, Nylon, Spandex,
  Viscose, Bamboo, Wool, Linen, Silk, etc.). Preserve the percentages
  as the source shows them.
  If yarn_type can be cleanly extracted from fabric_type (e.g.
  fabric_type = "100% Polyester terry knit fabric" → yarn_type =
  "100% Polyester"), do it.
  If the source doesn't clearly state composition, leave null.

These two fields drive the YarnPlanning page downstream — getting them
right at extraction time avoids a brittle regex pass later.

Produce one tool call to "extract_tech_pack". The "skus" array is required and must
contain at least one row. If the source genuinely has no SKU rows (e.g. the file is
not a tech pack at all), still call the tool with skus=[] and set _notes to explain.

For "_confidence.overall" use:
  0.9-1.0 = every field unambiguous
  0.6-0.9 = mostly clear, a few inferences
  0.3-0.6 = significant uncertainty
  0.0-0.3 = the source barely resembles a tech pack"
`;

exports[`getPromptForKind (drift detection) > tech_pack tool schema matches snapshot 1`] = `
{
  "description": "Return the structured contents of a textile tech pack.",
  "input_schema": {
    "properties": {
      "_confidence": {
        "properties": {
          "overall": {
            "type": "number",
          },
          "per_section": {
            "type": "object",
          },
        },
        "required": [
          "overall",
        ],
        "type": "object",
      },
      "_notes": {
        "type": [
          "string",
          "null",
        ],
      },
      "accessories": {
        "items": {
          "properties": {
            "accessory_type": {
              "type": [
                "string",
                "null",
              ],
            },
            "color": {
              "type": [
                "string",
                "null",
              ],
            },
            "description": {
              "type": [
                "string",
                "null",
              ],
            },
            "material": {
              "type": [
                "string",
                "null",
              ],
            },
            "placement": {
              "type": [
                "string",
                "null",
              ],
            },
            "quantity_per_unit": {
              "type": [
                "number",
                "null",
              ],
            },
            "size_spec": {
              "type": [
                "string",
                "null",
              ],
            },
            "source_label": {
              "type": [
                "string",
                "null",
              ],
            },
            "supplier": {
              "type": [
                "string",
                "null",
              ],
            },
            "unit": {
              "type": [
                "string",
                "null",
              ],
            },
          },
          "type": "object",
        },
        "type": "array",
      },
      "fabric_specs": {
        "items": {
          "properties": {
            "color": {
              "type": [
                "string",
                "null",
              ],
            },
            "component_type": {
              "type": [
                "string",
                "null",
              ],
            },
            "construction": {
              "type": [
                "string",
                "null",
              ],
            },
            "fabric_type": {
              "type": [
                "string",
                "null",
              ],
            },
            "finish": {
              "type": [
                "string",
                "null",
              ],
            },
            "gsm": {
              "type": [
                "number",
                "null",
              ],
            },
            "yarn_count": {
              "type": [
                "string",
                "null",
              ],
            },
            "yarn_type": {
              "type": [
                "string",
                "null",
              ],
            },
          },
          "type": "object",
        },
        "type": "array",
      },
      "header": {
        "properties": {
          "brand": {
            "type": [
              "string",
              "null",
            ],
          },
          "product_name": {
            "type": [
              "string",
              "null",
            ],
          },
          "product_no": {
            "type": [
              "string",
              "null",
            ],
          },
          "product_type": {
            "type": [
              "string",
              "null",
            ],
          },
        },
        "type": "object",
      },
      "labels": {
        "items": {
          "properties": {
            "color": {
              "type": [
                "string",
                "null",
              ],
            },
            "material": {
              "type": [
                "string",
                "null",
              ],
            },
            "placement": {
              "type": [
                "string",
                "null",
              ],
            },
            "quantity_per_unit": {
              "type": [
                "number",
                "null",
              ],
            },
            "section": {
              "type": [
                "string",
                "null",
              ],
            },
            "size_spec": {
              "type": [
                "string",
                "null",
              ],
            },
            "supplier": {
              "type": [
                "string",
                "null",
              ],
            },
            "type": {
              "type": [
                "string",
                "null",
              ],
            },
            "unit": {
              "type": [
                "string",
                "null",
              ],
            },
          },
          "type": "object",
        },
        "type": "array",
      },
      "packaging": {
        "items": {
          "properties": {
            "category": {
              "type": [
                "string",
                "null",
              ],
            },
            "color": {
              "type": [
                "string",
                "null",
              ],
            },
            "label": {
              "type": [
                "string",
                "null",
              ],
            },
            "quantity_per_unit": {
              "type": [
                "number",
                "null",
              ],
            },
            "size_spec": {
              "type": [
                "string",
                "null",
              ],
            },
            "supplier": {
              "type": [
                "string",
                "null",
              ],
            },
            "unit": {
              "type": [
                "string",
                "null",
              ],
            },
            "value": {
              "type": [
                "string",
                "null",
              ],
            },
            "variant": {
              "type": [
                "string",
                "null",
              ],
            },
          },
          "type": "object",
        },
        "type": "array",
      },
      "skus": {
        "items": {
          "properties": {
            "carton_size_cm": {
              "type": [
                "string",
                "null",
              ],
            },
            "color": {
              "type": [
                "string",
                "null",
              ],
            },
            "insert_dimensions": {
              "type": [
                "string",
                "null",
              ],
            },
            "is_set": {
              "type": [
                "boolean",
                "null",
              ],
            },
            "item_code": {
              "type": "string",
            },
            "product_dimensions": {
              "type": [
                "string",
                "null",
              ],
            },
            "pvc_bag_dimensions": {
              "type": [
                "string",
                "null",
              ],
            },
            "size": {
              "type": [
                "string",
                "null",
              ],
            },
            "stiffener_size": {
              "type": [
                "string",
                "null",
              ],
            },
            "units_per_carton": {
              "type": [
                "number",
                "null",
              ],
            },
            "zipper_length": {
              "type": [
                "string",
                "null",
              ],
            },
          },
          "required": [
            "item_code",
          ],
          "type": "object",
        },
        "type": "array",
      },
      "trims": {
        "items": {
          "properties": {
            "color": {
              "type": [
                "string",
                "null",
              ],
            },
            "description": {
              "type": [
                "string",
                "null",
              ],
            },
            "placement": {
              "type": [
                "string",
                "null",
              ],
            },
            "quantity_per_unit": {
              "type": [
                "number",
                "null",
              ],
            },
            "size_spec": {
              "type": [
                "string",
                "null",
              ],
            },
            "supplier": {
              "type": [
                "string",
                "null",
              ],
            },
            "trim_type": {
              "type": [
                "string",
                "null",
              ],
            },
            "unit": {
              "type": [
                "string",
                "null",
              ],
            },
            "wastage_percent": {
              "type": [
                "number",
                "null",
              ],
            },
          },
          "type": "object",
        },
        "type": "array",
      },
      "zipper": {
        "properties": {
          "color": {
            "type": [
              "string",
              "null",
            ],
          },
          "length": {
            "type": [
              "string",
              "null",
            ],
          },
          "type": {
            "type": [
              "string",
              "null",
            ],
          },
        },
        "type": "object",
      },
    },
    "required": [
      "skus",
      "_confidence",
    ],
    "type": "object",
  },
  "name": "extract_tech_pack",
}
`;
